# basic-ros2

./: CMakeLists.txt  README.md  package.xml
scripts/: my_node.py
